examples/datalog/18_advanced_patterns/72_moving_aggregate.dl
% Test: Moving aggregate pattern
% Expected: Aggregate over sliding window
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_moving
.kg use test_moving

+timeseries[(1, 10), (2, 20), (3, 15), (4, 25), (5, 30)].

% Sum of current and previous value
moving_sum(T, V, <SUM:V2>) :-
    timeseries(T, V),
    timeseries(T2, V2),
    T2 >= T - 1,
    T2 <= T.

?- moving_sum(T, V, S).

.kg use default
.kg drop test_moving
